--- a/src/app/routes/allSituation/allSituation.component.html
+++ b/src/app/routes/allSituation/allSituation.component.html
@@ -1,10 +1,134 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-123123213
-</body>
-</html>
+<div nz-row id="allSituationComponent">
+  <div nz-col nzLg="8" nzSpan="24" class="each">
+    <div class="each-child">
+      <div class="ng-icon">
+        <div class="bg-icon cash"></div>
+      </div>
+      <div class="desc">
+        <div class="desc-l">
+          <div class="cost ad-text-red ad-font-size-20">
+            0.00
+            <span class="ad-font-size-12">元</span>
+          </div>
+          <div class="name ad-font-size-12">
+            现金账户
+            <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+          </div>
+        </div>
+        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">充值</button>
+      </div>
+    </div>
+
+  </div>
+
+  <div nz-col nzLg="8" nzSpan="24" class="each">
+    <div class="each-child">
+      <div class="ng-icon">
+        <div class="bg-icon virtual"></div>
+      </div>
+      <div class="desc">
+        <div class="desc-l">
+          <div class="cost ad-text-light-green ad-font-size-20">
+            0.00
+            <span class="ad-font-size-12">元</span>
+          </div>
+          <div class="name ad-font-size-12">
+            虚拟账户
+            <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+          </div>
+        </div>
+        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">明细</button>
+      </div>
+    </div>
+
+  </div>
+
+  <div nz-col nzLg="8" nzSpan="24" class="each">
+    <div class="each-child">
+      <div class="ng-icon">
+        <div class="bg-icon time"></div>
+      </div>
+      <div class="desc">
+        <div class="desc-l">
+          <div class="cost ad-text-light-green ad-font-size-20">
+            0
+            <span class="ad-font-size-12">天</span>
+          </div>
+          <div class="name ad-font-size-12">
+            赠送时长
+            <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+          </div>
+        </div>
+        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">明细</button>
+      </div>
+    </div>
+
+  </div>
+
+  <div nz-col nzLg="8" nzSpan="24" class="each">
+    <div class="each-child">
+      <div class="ng-icon">
+        <div class="bg-icon warming"></div>
+      </div>
+      <div class="notice">
+        <div class="title ad-font-bold">
+          到期提醒
+          <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+        </div>
+        <div class="outOfDate">
+          <div class="name ad-font-size-12">
+            “招聘销售人员”将于2019年01月24日到期，请及时续约！
+          </div>
+          <div class="ad-font-size-12">01/18</div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <div nz-col nzLg="8" nzSpan="24" class="each">
+    <div class="each-child">
+      <div class="ng-icon">
+        <div class="bg-icon temp"></div>
+      </div>
+      <div class="desc">
+        <div class="desc-l">
+          <div class="cost ad-font-bold">我的模板库</div>
+          <div class="name ad-font-size-12">
+            我的模板库
+            <span class="ad-text-light-green">1</span>
+          </div>
+        </div>
+        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">查询</button>
+      </div>
+    </div>
+
+  </div>
+
+  <div nz-col nzLg="8" nzSpan="24" class="each">
+    <div class="each-child">
+      <div class="ng-icon">
+        <div class="bg-icon adstati"></div>
+      </div>
+      <div class="adstati">
+        <div class="title ">广告统计</div>
+        <div nz-row class="statistics">
+          <div nz-col nzLg="8" class="item">
+            <div class="item-l">待审核</div>
+            <div class="item-r">0</div>
+          </div>
+          <div nz-col nzLg="8" class="item">
+            <div class="item-l">待审核</div>
+            <div class="item-r">0</div>
+          </div>
+          <div nz-col nzLg="8" class="item">
+            <div class="item-l">待审核</div>
+            <div class="item-r">0</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
