--- a/src/app/routes/home/home.component.html
+++ b/src/app/routes/home/home.component.html
@@ -1,4 +1,4 @@
-<div nz-row class="container">
+<div nz-row class="container" id="homeComponent">
   <div nz-col nzSpan="3" class="home-left">
     <div>整体情况</div>
     <div>最近创建广告</div>
@@ -6,5 +6,4 @@
   <div nz-col nzSpan="21" class="home-right">
     <router-outlet></router-outlet>
   </div>
-
 </div>
