--- a/src/app/routes/home/home.less
+++ b/src/app/routes/home/home.less
@@ -1,10 +1,12 @@
 @import "../../../styles/theme.less";
-div.container{
+div#homeComponent{
   width: 100%;
   height: 100%;
+  padding: 15px 0;
   div.home-left{
-    background-color: @white-color;
+    background-color: @ad-white-color;
     height: 100%;
   }
+
 }
 
