--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,7 +1,11 @@
 // 可以通过 https://ng-alain.github.io/ng-alain/ 获取主题参数代码
 // The theme paraments can be generated at https://ng-alain.github.io/ng-alain/
 @primary-color: #333;
-@white-color: #fff;
+@ad-white-color: #fff;
+@ad-light-green-color: #00dacc;
+@ad-text-light-gray-color: #d6d6d6;
+@ad-red-color: #ff3d5f;
+@ad-blue-color: #63D6EF;
 @alain-default-header-bg: #333;
 @alain-default-aside-nav-text-hover-color: #333;
 @alain-default-aside-nav-selected-text-color: #333;
