--- a/src/app/routes/allSituation/allSituation.component.html
+++ b/src/app/routes/allSituation/allSituation.component.html
@@ -1,134 +1,230 @@
-<div nz-row id="allSituationComponent">
-  <div nz-col nzLg="8" nzSpan="24" class="each">
-    <div class="each-child">
-      <div class="ng-icon">
-        <div class="bg-icon cash"></div>
-      </div>
-      <div class="desc">
-        <div class="desc-l">
-          <div class="cost ad-text-red ad-font-size-20">
-            0.00
-            <span class="ad-font-size-12">元</span>
+<div id="allSituationComponent">
+  <div id="each-list" nz-row nzGutter="16">
+    <div nz-col nzLg="8" nzSpan="24" class="gutter-row each">
+      <div class="each-child">
+        <div class="ng-icon">
+          <div class="bg-icon cash"></div>
+        </div>
+        <div class="desc">
+          <div class="desc-l">
+            <div class="cost ad-text-red ad-font-size-20">
+              0.00
+              <span class="ad-font-size-12">元</span>
+            </div>
+            <div class="name ad-font-size-12">
+              现金账户
+              <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+            </div>
           </div>
-          <div class="name ad-font-size-12">
-            现金账户
+          <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">充值</button>
+        </div>
+      </div>
+
+    </div>
+
+    <div nz-col nzLg="8" nzSpan="24" class="gutter-row each">
+      <div class="each-child">
+        <div class="ng-icon">
+          <div class="bg-icon virtual"></div>
+        </div>
+        <div class="desc">
+          <div class="desc-l">
+            <div class="cost ad-text-light-green ad-font-size-20">
+              0.00
+              <span class="ad-font-size-12">元</span>
+            </div>
+            <div class="name ad-font-size-12">
+              虚拟账户
+              <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+            </div>
+          </div>
+          <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">明细</button>
+        </div>
+      </div>
+
+    </div>
+
+    <div nz-col nzLg="8" nzSpan="24" class="gutter-row each">
+      <div class="each-child">
+        <div class="ng-icon">
+          <div class="bg-icon time"></div>
+        </div>
+        <div class="desc">
+          <div class="desc-l">
+            <div class="cost ad-text-light-green ad-font-size-20">
+              0
+              <span class="ad-font-size-12">天</span>
+            </div>
+            <div class="name ad-font-size-12">
+              赠送时长
+              <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
+            </div>
+          </div>
+          <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">明细</button>
+        </div>
+      </div>
+
+    </div>
+
+    <div nz-col nzLg="8" nzSpan="24" class="gutter-row each">
+      <div class="each-child">
+        <div class="ng-icon">
+          <div class="bg-icon warming"></div>
+        </div>
+        <div class="notice">
+          <div class="title ad-font-bold">
+            到期提醒
             <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
           </div>
+          <div class="outOfDate ad-text-9 ad-font-size-12">
+            <div class="name  ellipsis">
+              “招聘销售人员”将于2019年01月24日到期，请及时续约！
+            </div>
+            <div class="date">01/18</div>
+          </div>
         </div>
-        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">充值</button>
       </div>
+
     </div>
 
+    <div nz-col nzLg="8" nzSpan="24" class="gutter-row each">
+      <div class="each-child">
+        <div class="ng-icon">
+          <div class="bg-icon temp"></div>
+        </div>
+        <div class="desc">
+          <div class="desc-l">
+            <div class="cost ad-font-bold">我的模板库</div>
+            <div class="name ad-font-size-12 ad-text-9">
+              我的模板库
+              <span class="ad-text-light-green">1</span>
+            </div>
+          </div>
+          <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">查询</button>
+        </div>
+      </div>
+
+    </div>
+
+    <div nz-col nzLg="8" nzSpan="24" class="gutter-row each">
+      <div class="each-child">
+        <div class="ng-icon">
+          <div class="bg-icon adstati"></div>
+        </div>
+        <div class="adstati">
+          <div class="title ad-font-bold">广告统计</div>
+          <div nz-row class="statistics">
+            <div nz-col nzLg="8" nzSpan="8" class="item ad-font-size-12">
+              <div class="item-l ad-text-9">待审核</div>
+              <div class="item-r ad-text-blue">0</div>
+            </div>
+            <div nz-col nzLg="8" nzSpan="8" class="item ad-font-size-12">
+              <div class="item-l ad-text-9">未通过</div>
+              <div class="item-r ad-text-blue">0</div>
+            </div>
+            <div nz-col nzLg="8" nzSpan="8" class="item ad-font-size-12">
+              <div class="item-l ad-text-9">播放中</div>
+              <div class="item-r ad-text-blue">0</div>
+            </div>
+
+            <div nz-col nzLg="8" nzSpan="8" class="item ad-font-size-12">
+              <div class="item-l ad-text-9">今日新增</div>
+              <div class="item-r ad-text-blue">0</div>
+            </div>
+            <div nz-col nzLg="8" nzSpan="8" class="item ad-font-size-12">
+              <div class="item-l ad-text-9">累计数量</div>
+              <div class="item-r ad-text-blue">0</div>
+            </div>
+            <div nz-col nzLg="8" nzSpan="8" class="item ad-font-size-12">
+              <div class="item-l ad-text-9">即将到期</div>
+              <div class="item-r ad-text-blue">0</div>
+            </div>
+
+
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 
-  <div nz-col nzLg="8" nzSpan="24" class="each">
-    <div class="each-child">
-      <div class="ng-icon">
-        <div class="bg-icon virtual"></div>
-      </div>
-      <div class="desc">
-        <div class="desc-l">
-          <div class="cost ad-text-light-green ad-font-size-20">
-            0.00
-            <span class="ad-font-size-12">元</span>
-          </div>
-          <div class="name ad-font-size-12">
-            虚拟账户
-            <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
-          </div>
-        </div>
-        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">明细</button>
-      </div>
+  <div id="overall-situation">
+    <div class="title data-top">
+      整体情况
+      <span>（以下数据截止到昨天） </span>
+      <nz-dropdown class="select-btn">
+        <button nz-button nz-dropdown><span>社区媒体</span> <i nz-icon type="down"></i></button>
+        <ul nz-menu>
+          <li nz-menu-item>
+            <a>社区媒体</a>
+          </li>
+          <li nz-menu-item>
+            <a>移动媒体</a>
+          </li>
+          <li nz-menu-item>
+            <a>PC媒体</a>
+          </li>
+        </ul>
+      </nz-dropdown>
     </div>
-
+    <div class="reportBox">
+      <div echarts [options]="chartOption" class="demo-chart"></div>
+    </div>
   </div>
 
-  <div nz-col nzLg="8" nzSpan="24" class="each">
-    <div class="each-child">
-      <div class="ng-icon">
-        <div class="bg-icon time"></div>
-      </div>
-      <div class="desc">
-        <div class="desc-l">
-          <div class="cost ad-text-light-green ad-font-size-20">
-            0
-            <span class="ad-font-size-12">天</span>
-          </div>
-          <div class="name ad-font-size-12">
-            赠送时长
-            <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
-          </div>
+  <div nz-row nzGutter="16" id="statistics-info">
+    <div nz-col nzLg="6" nzSpan="24" class="gutter-row">
+      <div class="item">
+        <div class="title data-top">
+          曝光量
         </div>
-        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">明细</button>
-      </div>
-    </div>
-
-  </div>
-
-  <div nz-col nzLg="8" nzSpan="24" class="each">
-    <div class="each-child">
-      <div class="ng-icon">
-        <div class="bg-icon warming"></div>
-      </div>
-      <div class="notice">
-        <div class="title ad-font-bold">
-          到期提醒
-          <i class="ad-font-size-15 ad-text-light-gray" nz-icon type="question-circle" theme="outline"></i>
-        </div>
-        <div class="outOfDate">
-          <div class="name ad-font-size-12">
-            “招聘销售人员”将于2019年01月24日到期，请及时续约！
-          </div>
-          <div class="ad-font-size-12">01/18</div>
+        <div class="data-list">
+          <a class="ad-font-size-12" nz-row href="#">
+            <div nz-col nzSpan="12" title="招聘销售人员">1.招聘销售人员</div>
+            <div nz-col nzSpan="12" class="ad-text-blue text-right">12958</div>
+          </a>
         </div>
       </div>
     </div>
-
-  </div>
-
-  <div nz-col nzLg="8" nzSpan="24" class="each">
-    <div class="each-child">
-      <div class="ng-icon">
-        <div class="bg-icon temp"></div>
-      </div>
-      <div class="desc">
-        <div class="desc-l">
-          <div class="cost ad-font-bold">我的模板库</div>
-          <div class="name ad-font-size-12">
-            我的模板库
-            <span class="ad-text-light-green">1</span>
-          </div>
+    <div nz-col nzLg="6" nzSpan="24" class="gutter-row">
+      <div class="item">
+        <div class="title data-top">
+          曝光量
         </div>
-        <button class="desc-r ad-blue-outline-btn" nz-button nzType="warn">查询</button>
-      </div>
-    </div>
-
-  </div>
-
-  <div nz-col nzLg="8" nzSpan="24" class="each">
-    <div class="each-child">
-      <div class="ng-icon">
-        <div class="bg-icon adstati"></div>
-      </div>
-      <div class="adstati">
-        <div class="title ">广告统计</div>
-        <div nz-row class="statistics">
-          <div nz-col nzLg="8" class="item">
-            <div class="item-l">待审核</div>
-            <div class="item-r">0</div>
-          </div>
-          <div nz-col nzLg="8" class="item">
-            <div class="item-l">待审核</div>
-            <div class="item-r">0</div>
-          </div>
-          <div nz-col nzLg="8" class="item">
-            <div class="item-l">待审核</div>
-            <div class="item-r">0</div>
-          </div>
+        <div class="data-list">
+          <a class="ad-font-size-12" nz-row href="#">
+            <div nz-col nzSpan="12" title="招聘销售人员">1.招聘销售人员</div>
+            <div nz-col nzSpan="12" class="ad-text-blue text-right">12958</div>
+          </a>
         </div>
       </div>
     </div>
-
+    <div nz-col nzLg="6" nzSpan="24" class="gutter-row">
+      <div class="item">
+        <div class="title data-top">
+          曝光量
+        </div>
+        <div class="data-list">
+          <a class="ad-font-size-12" nz-row href="#">
+            <div nz-col nzSpan="12" title="招聘销售人员">1.招聘销售人员</div>
+            <div nz-col nzSpan="12" class="ad-text-blue text-right">12958</div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div nz-col nzLg="6" nzSpan="24" class="gutter-row">
+      <div class="item">
+        <div class="title data-top">
+          曝光量
+        </div>
+        <div class="data-list">
+          <a class="ad-font-size-12" nz-row href="#">
+            <div nz-col nzSpan="12" title="招聘销售人员">1.招聘销售人员</div>
+            <div nz-col nzSpan="12" class="ad-text-blue text-right">12958</div>
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 
 </div>
