--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -3,7 +3,10 @@
 @primary-color: #333;
 @ad-white-color: #fff;
 @ad-light-green-color: #00dacc;
-@ad-text-light-gray-color: #d6d6d6;
+@ad-light-gray-color: #d6d6d6;
+@ad-3-color: #333;
+@ad-6-color: #666;
+@ad-9-color: #999;
 @ad-red-color: #ff3d5f;
 @ad-blue-color: #63D6EF;
 @alain-default-header-bg: #333;
